research/primary/reference-ecosystems/ncr-sdl-parser/sdl-parser/src/snapshots/sdl_parser__feature__tests__feature_includes_dependencies.snap
---
source: sdl-parser/src/feature.rs
expression: feature
---
Feature {
    name: None,
    feature_type: Service,
    _source_helper: Some(
        ShortSource(
            "some-service",
        ),
    ),
    source: None,
    dependencies: Some(
        [
            "some-virtual-machine",
            "some-switch",
            "something-else",
        ],
    ),
    vulnerabilities: None,
    destination: None,
    description: None,
    environment: None,
}
