research/primary/reference-ecosystems/ncr-sdl-parser/sdl-parser/src/snapshots/sdl_parser__feature__tests__feature_source_fields_are_mapped_correctly.snap
---
source: sdl-parser/src/feature.rs
expression: features
---
my-cool-feature:
  name: ~
  type: Service
  source:
    name: some-service
    version: "*"
  dependencies: ~
  vulnerabilities: ~
  destination: ~
  description: ~
  environment: ~
my-cool-feature-config:
  name: ~
  type: Configuration
  source:
    name: cool-config
    version: 1.0.0
  dependencies: ~
  vulnerabilities: ~
  destination: ~
  description: ~
  environment: ~

