research/primary/reference-ecosystems/ncr-sdl-parser/sdl-parser/src/snapshots/sdl_parser__feature__tests__feature_source_shorthand_is_parsed.snap
---
source: sdl-parser/src/feature.rs
expression: feature
---
Feature {
    name: None,
    feature_type: Artifact,
    _source_helper: Some(
        ShortSource(
            "artifact-name",
        ),
    ),
    source: None,
    dependencies: None,
    vulnerabilities: None,
    destination: None,
    description: None,
    environment: None,
}
